WIP leapfrog model with DemProj

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(ccmppR)
 export(ccmpp_leslieR)
 export(fit_tmb)
+export(leapfrogR)
 export(make_leslie_matrixR)
 export(make_tmb_obj)
 export(sample_tmb)
