--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: leapfrog
 Title: Multistate Population Projection Model for Demographic and HIV Estimation
-Version: 0.0.0.9001
+Version: 0.0.1
 Authors@R: 
     person(given = "Jeffrey",
            family = "Last",
@@ -11,7 +11,7 @@ Description: Leapfrog is a multistate population projection model for estimating
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.2
 LinkingTo: 
     Rcpp,
     RcppEigen,
@@ -23,6 +23,6 @@ Imports:
     TMB (>= 1.7.16)
 Suggests:
     covr,
+    eppasm (>= 0.5.12),
     popReconstruct,
     testthat (>= 2.1.0)
-
