fix Rcmd CHECK warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(ccmppR)
 export(ccmpp_leslieR)
 export(leapfrogR)
 export(make_leslie_matrixR)
+export(prepare_leapfrog_demp)
+export(prepare_leapfrog_projp)
 importClassesFrom(Matrix,dgCMatrix)
 importFrom(Rcpp,sourceCpp)
 useDynLib(leapfrog, .registration = TRUE)
